syntax = "proto3";

package proto;

message RoleBase {
  int64 Id = 1;
  int32 Level = 2;
  int32 Gender = 3;
  string Name = 4;
}